# IOT-backend

./: .gitignore  README.md  Readme.md  depend.py  docker-compose.yml  inserting_testing_data.py  package-lock.json  package.json  pyproject.toml  run.py  server.py  server_run.py  token_utils.py
Documents/Programming/大三上/智慧選址/ParkClassifier-main/: README.md  index.html  requirements.txt
Documents/Programming/大三上/智慧選址/ParkClassifier-main/Binary/: index.html
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  Handlers.js
client/src/component/: ABoxSwitch.js  CostumButton.js  Footer.js  Header.js  HumidityChart.js  Infomation.js  Navbar.js  TemperatureChart.js  components.js  fetchApi.js
client/src/component/ABoxSwitch/: ABoxSwitch.css  ABoxSwitch.js
client/src/component/styles/: ABoxSwitch.css
client/src/pages/: Home.js  Login.js  Pages.js  Test.js  WebView.js
client/src/routes/: MobileRoute.js  Routers.js  WebRoute.js
client/src/services/: fetchApi.js
data_acquisition/: app.py
plc/: README_SERVER.md  app.py  plc_simulator.py  requirements.txt  server.py  socket_config.py  socket_test_server.py  start_plc_with_socket.py  start_server.py  test.py  test_socket_transmission.py
plc/components/: db_connection.py  http_client.py  plc_connection.py  socket_client.py
server/: .env  Dockerfile  index.js  index.py  init.sql  package-lock.json  package.json  requirements.txt
server/config/: db.py
server/models/: Abox.py  Data.py  PLC.py  User.py
server/plc/: plc_connection.py
server/routes/: user_routes.py
setting/: .env.dev  .env.prod  config.py
(+27 files in other folders)
