[project]
name = "iot-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "yez",email = "yez1125lin@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.8"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pymongo (>=4.10.0,<4.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
