[project]
name = "iot-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "yez",email = "yez1125lin@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.8"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "motor (>=3.7.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "python-socketio (>=5.13.0,<6.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
